Update defaulting to match new build changes.
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@1576 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/conf/default.build.properties
+++ b/conf/default.build.properties
@@ -5,4 +5,4 @@ tomcat.password=password
 tomcat.url=http\://localhost\:8080/manager
 tomcat.home=/usr/local/tomcat
 shib.webapp.name=shibboleth-idp
-idp.install-type=filesystem
+idp.install-type=filesystem.prompt
