During the non-interactive install task, create a config directory if one doesn't exist.
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@1579 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/build.xml
+++ b/build.xml
@@ -308,7 +308,10 @@
 
         <!-- copy IdP configuration -->
         <if>
-            <equals arg1="${copy-idp-conf}" arg2="y" />
+            <or>
+                <equals arg1="${copy-idp-conf}" arg2="y" />
+                <not> <available file="${shib.home}/etc" /> </not>
+            </or>
             <then>
                 <delete dir="${shib.home}/etc" />
                 <antcall target="install.idp.filesystem.config" />
