Wayf target was deleting classes.
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@1588 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/build.xml
+++ b/build.xml
@@ -364,7 +364,7 @@
     </target>
 
     <!-- Create WAYF and move it to ${dist} -->
-    <target name="package-wayf" depends="compile, clean-build">
+    <target name="package-wayf" depends="compile">
         <war warfile="${dist}/${distnameWayf}.war" webxml="${configroot}/wayf.xml" basedir="${approot}" update="no" />
     </target>
     
