--- a/conf/default.build.properties
+++ b/conf/default.build.properties
@@ -1,10 +1,12 @@
 #Mon May 16 09:03:19 CDT 2005
 tomcat.username=manager
-shib.home=/usr/local/shibboleth-idp
-shibsp.home=/usr/local/shibboleth-sp
+idp.home=/usr/local/shibboleth-idp
+sp.home=/usr/local/shibboleth-sp
 tomcat.password=password
 tomcat.url=http\://localhost\:8080/manager
 tomcat.home=/usr/local/tomcat
-shib.webapp.name=shibboleth-idp
-shibsp.webapp.name=shibboleth-sp
+idp.webapp.name=shibboleth-idp
+sp.webapp.name=shibboleth-sp
 idp.install-type=filesystem.prompt
+idp.deployment.descriptor=dist.idp.xml
+sp.deployment.descriptor=dist.sp.xml
